--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="styles.css" rel="stylesheet">
   <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+  <script src="../node_modules/localforage/dist/localforage.min.js" ></script>
 </head>
 <body>
   <div class="page-wrapper">
